sonarr.yaml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-sonarr
  namespace: dlservices
  annotations:
    cert-manager.io/issue-temporary-certificate: "true"
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod

    nginx.ingress.kubernetes.io/auth-response-headers: Remote-User,Remote-Name,Remote-Groups,Remote-Email
    nginx.ingress.kubernetes.io/auth-signin: https://auth.vels.online

    nginx.ingress.kubernetes.io/auth-snippet: |
      proxy_set_header X-Forwarded-Method $request_method;
    nginx.ingress.kubernetes.io/auth-url: http://auth.authelia.svc.cluster.local:80/api/verify

    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Forwarded-Method $request_method;


spec:
  rules:
  - host: sonarr.vels.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarr
            port:
              number: 8989


  tls:
  - hosts:
    - sonarr.vels.online
    secretName: sonarr-tls-secret
